Add events.html structure and apply proper styling in events-style.css; include GitHub, Docker, and Linux related event images; as well as minor tweaks to other HTML files.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>UAM | Inicio</title>
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script src="https://kit.fontawesome.com/2af02d949f.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/index-styles.css">
-</head>
+  </head>
 
 <body>
   <div id="navbar"></div>
@@ -30,10 +30,10 @@
             Explorá GitHub colaborativo, Docker y Servidores Linux.
           </p>
           <div class="d-flex flex-column flex-sm-row gap-3">
-            <a href="registro.html" class="btn btn-lg btn-hero-primary fade-in" style="animation-delay: 1s;">
+            <a href="registry.html" class="btn btn-lg btn-hero-primary fade-in" style="animation-delay: 1s;">
               Registrarse
             </a>
-            <a href="eventos.html"
+            <a href="events.html"
               class="btn btn-lg btn-hero-secondary fade-in"
               style="animation-delay: 1.3s;">
               Más información
@@ -59,7 +59,6 @@
       <div class="container">
         <h2 class="text-center mb-5">Sobre UAM</h2>
         
-        <!-- Fila 1: Quiénes somos (full width) -->
         <div class="row mb-4">
           <div class="col-12">
             <div class="card h-100 shadow-sm">
@@ -70,16 +69,14 @@
                   Consejo Nacional de Universidades ese mismo año. Somos la segunda casa de estudios superior del país y la primera
                   privada acreditada en Calidad Institucional Optimizada para 2025–2030. Con más de 5 000 egresados en áreas como
                   Derecho, Ingeniería y Ciencias Empresariales, contamos con un campus moderno, laboratorios de última generación y
-                  plataformas virtuales avanzadas. Ofrecemos 45 posgrados, un UAM College 100 % en inglés desde 1998 y un Centro de
+                  plataformas virtuales avanzadas. Ofrecemos 45 posgrados, un UAM College 100% en inglés desde 1998 y un Centro de
                   Idiomas que fortalece la formación multicultural. Nos guía la excelencia académica y la innovación tecnológica.</p>
               </div>
             </div>
           </div>
         </div>
     
-        <!-- Fila 2: Misión y Visión sin imágenes -->
         <div class="row g-4">
-          <!-- Misión -->
           <div class="col-12 col-md-6">
             <div class="card h-100 shadow-sm">
               <div class="card-body">
@@ -89,7 +86,6 @@
               </div>
             </div>
           </div>
-          <!-- Visión -->
           <div class="col-12 col-md-6">
             <div class="card h-100 shadow-sm">
               <div class="card-body">
@@ -108,7 +104,6 @@
       <div class="container">
         <h2 class="text-center mb-5">Galería UAM</h2>
         <div id="carouselCaptions" class="carousel slide" data-bs-ride="carousel">
-          <!-- Indicadores -->
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
