--- a/partial-views/navbar.html
+++ b/partial-views/navbar.html
@@ -13,15 +13,22 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto text-uppercase ps-3 ps-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Inicio</a>
+          <a class="nav-link active" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="eventos.html">Eventos</a>
+          <a class="nav-link" href="events.html">Eventos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="registro.html">Registro</a>
+          <a class="nav-link" href="registry.html">Registro</a>
         </li>
       </ul>
     </div>
   </div>
+  <style>
+    #logo {
+      vertical-align: middle;
+      object-fit: cover;
+      padding: 6px;
+    }
+  </style>
 </nav>
