Add registry.html structure and proper styling in registry-styles.css, implement JS validation in form fields, refine navbar and footer interactions with dynamic active links, and various other improvements.

--- a/partial-views/footer.html
+++ b/partial-views/footer.html
@@ -1,31 +1,39 @@
 <!-- Footer -->
 <footer class="bg-dark text-white py-4" id="footer">
   <div class="container">
-      <hr class="border-secondary mb-4">
-      <div class="row align-items-center">
-        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-            <p class="mb-1 fw-semibold">Conéctate con nosotros</p>
-            <a href="#" class="text-white me-3 fs-5"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="text-white me-3 fs-5"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" class="text-white me-3 fs-5"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="text-white me-3 fs-5"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="text-white me-3 fs-5"><i class="fab fa-youtube"></i></a>
-            <a href="#" class="text-white fs-5"><i class="fab fa-tiktok"></i></a>
-        </div>
-        <div class="col-md-6 text-center text-md-end">
-            <p class="mb-0">© 2025 Universidad Americana - UAM</p>
-            <p class="mb-0">Facultad de Ingeniería y Arquitectura</p>
-            <a href="#" class="text-white hover-text-primary text-decoration-none">Política de privacidad</a>
-            <span class="text-white"> • </span>
-            <a href="#" class="text-white hover-text-primary text-decoration-none">Términos de uso</a>
-        </div>          
+    <hr class="border-secondary mb-4">
+    <div class="row align-items-center">
+      <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+        <p class="mb-1 fw-semibold">Conéctate con nosotros</p>
+        <a href="https://www.facebook.com/UAMNicaragua/" target="_blank" class="text-white me-3 fs-5"><i
+            class="fab fa-facebook-f"></i></a>
+        <a href="https://www.linkedin.com/school/universidad-americana-uam-/posts/?feedView=all" target="_blank"
+          class="text-white me-3 fs-5"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.instagram.com/uam.nicaragua/" target="_blank" class="text-white me-3 fs-5"><i
+            class="fab fa-instagram"></i></a>
+        <a href="https://x.com/uamnica" target="_blank" class="text-white me-3 fs-5"><i
+            class="fa-brands fa-x-twitter"></i></a>
+        <a href="https://www.youtube.com/@UAMNica" target="_blank" class="text-white me-3 fs-5"><i
+            class="fab fa-youtube"></i></a>
+        <a href="https://www.tiktok.com/@uam.nicaragua" target="_blank" class="text-white fs-5"><i
+            class="fab fa-tiktok"></i></a>
       </div>
-      <hr class="border-secondary mt-4">
-      <div class="text-center fw-bold mt-3" >
-        <small><i class="fas fa-code"></i> Desarrollado por Cristian Gago</small>
+      <div class="col-md-6 text-center text-md-end">
+        <p class="mb-0">© 2025 Universidad Americana - UAM</p>
+        <p class="mb-0">Facultad de Ingeniería y Arquitectura</p>
+        <a href="#" class="text-white hover-text-primary text-decoration-none">Política de privacidad</a>
+        <span class="text-white"> • </span>
+        <a href="#" class="text-white hover-text-primary text-decoration-none">Términos de uso</a>
       </div>
+    </div>
+    <hr class="border-secondary mt-4">
+    <div class="text-center fw-bold mt-3">
+      <small><i class="fas fa-code"></i> Desarrollado por Cristian Gago</small>
+    </div>
   </div>
   <style>
-    .hover-text-primary:hover { color: #66adff !important; }
+    .hover-text-primary:hover {
+      color: #66adff !important;
+    }
   </style>
 </footer>
