--- a/partial-views/navbar.html
+++ b/partial-views/navbar.html
@@ -1,11 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
   <div class="container">
-    <!-- Logo que hace scroll hasta arriba -->
     <a class="navbar-brand" href="#">
       <img src="img/uam_logo_no_bg_white.webp" alt="Logo UAM" height="40" id="logo">
     </a>
 
-    <!-- Botón hamburguesa para móviles -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,7 +11,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto text-uppercase ps-3 ps-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" href="index.html">Inicio</a>
+          <a class="nav-link" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="events.html">Eventos</a>
